--- a/package.json
+++ b/package.json
@@ -20,16 +20,20 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs-modules/ioredis": "^2.0.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@types/redis": "^4.0.10",
+    "ioredis": "^5.6.1",
     "mongodb": "^6.16.0",
     "mongoose": "^8.15.0",
     "mysql2": "^3.14.1",
     "pg": "^8.16.0",
+    "redis": "^4.7.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.24"
