--- a/package.json
+++ b/package.json
@@ -21,13 +21,17 @@
   },
   "dependencies": {
     "@nestjs-modules/ioredis": "^2.0.2",
-    "@nestjs/common": "^10.0.0",
+    "@nestjs/apollo": "^13.1.0",
+    "@nestjs/common": "^11.1.2",
     "@nestjs/config": "^4.0.2",
-    "@nestjs/core": "^10.0.0",
+    "@nestjs/core": "^11.1.2",
+    "@nestjs/graphql": "^13.1.0",
     "@nestjs/mongoose": "^11.0.3",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^11.1.2",
     "@nestjs/typeorm": "^11.0.0",
     "@types/redis": "^4.0.10",
+    "apollo-server-express": "^3.13.0",
+    "graphql": "^16.11.0",
     "ioredis": "^5.6.1",
     "mongodb": "^6.16.0",
     "mongoose": "^8.15.0",
@@ -41,7 +45,7 @@
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
+    "@nestjs/testing": "^11.1.2",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
