--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start:dev": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "test:integration": "jest --config ./jest-integration.config.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -32,6 +33,8 @@
     "@nestjs/typeorm": "^11.0.0",
     "@types/redis": "^4.0.10",
     "apollo-server-express": "^3.13.0",
+    "bcrypt": "^6.0.0",
+    "class-transformer": "^0.5.1",
     "graphql": "^16.11.0",
     "ioredis": "^5.6.1",
     "mongodb": "^6.16.0",
@@ -49,7 +52,7 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^11.1.2",
     "@types/express": "^5.0.0",
-    "@types/jest": "^29.5.2",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
@@ -57,10 +60,11 @@
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
-    "jest": "^29.5.0",
+    "jest": "^29.7.0",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
-    "supertest": "^7.0.0",
+    "sqlite3": "^5.1.7",
+    "supertest": "^7.1.1",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
