--- a/package.json
+++ b/package.json
@@ -27,19 +27,24 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.2",
     "@nestjs/graphql": "^13.1.0",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.1.2",
     "@nestjs/swagger": "^11.2.0",
+    "@nestjs/terminus": "^11.0.0",
+    "@nestjs/throttler": "^6.4.0",
     "@nestjs/typeorm": "^11.0.0",
     "@types/redis": "^4.0.10",
     "apollo-server-express": "^3.13.0",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "graphql": "^16.11.0",
     "ioredis": "^5.6.1",
     "mongodb": "^6.16.0",
     "mongoose": "^8.15.0",
     "mysql2": "^3.14.1",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.16.0",
     "redis": "^4.7.1",
     "reflect-metadata": "^0.2.0",
@@ -54,6 +59,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.3.1",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
