--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@nestjs-modules/ioredis": "^2.0.2",
     "@nestjs/apollo": "^13.1.0",
+    "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^11.1.2",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.2",
@@ -36,6 +37,7 @@
     "@nestjs/typeorm": "^11.0.0",
     "@types/redis": "^4.0.10",
     "apollo-server-express": "^3.13.0",
+    "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
