--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/typeorm": "^11.0.0",
     "@types/redis": "^4.0.10",
+    "amqp-connection-manager": "^4.1.14",
+    "amqplib": "^0.10.8",
     "apollo-server-express": "^3.13.0",
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
